# campaign-agent

./: README.md  api_out.txt  env.sample  package-lock.json  pyproject.toml  render.yaml  requirements.txt  test_plan_api.py  test_ui.js  test_ui2.js  test_ui3.js
app/: __init__.py  main.py
app/agent/: __init__.py  chat_session.py  linkedin_agent.py  real_browser_agent.py
app/agent/resources/: __init__.py  config.py  prompts.yml
app/agent/utils/: __init__.py  models.py  post_parser.py  prompt_loader.py
docs/: ARCHITECTURE.md
static/: app.js  index.html  styles.css
